# pianoled-midi

./: .gitignore  HARDWARE.md  README.md
firmware/main/: bluetooth.cpp  bluetooth.h  config.example.h  leds.cpp  leds.h  main.ino  ota.cpp  ota.h  pianoled_connection.cpp  pianoled_connection.h  pianoled_discovery.cpp  pianoled_discovery.h  serial_control.cpp  serial_control.h  udp.cpp  udp.h
program/: pyproject.toml
program/piano_led/: __init__.py  app.py  discovery.py  effects.py  esp32.py  gui.py  key_mapping.py  midi_agent.py  midi_gui.py  protocol.py  serial_transport.py
program/tests/: test_key_mapping.py  test_midi_agent.py  test_protocol.py
