[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "piano-led"
version = "0.1.0"
description = "Aplicación de escritorio MIDI para PianoLED"
# python-rtmidi supplies Windows wheels through CPython 3.12.
requires-python = ">=3.10,<3.13"
dependencies = [
    "PySide6>=6.8",
    "mido>=1.3",
    "python-rtmidi>=1.5",
    "pyserial>=3.5",
]

[project.scripts]
piano-led-midi = "piano_led.midi_agent:main"
piano-led-midi-gui = "piano_led.midi_gui:run"

[tool.setuptools.packages.find]
include = ["piano_led*"]
